# men-clothes

./: .gitignore  DOCKER.md  FINAL_IMPROVEMENTS_REPORT.md  INSTRUCTION.md  KUBECONFIG_SETUP_INSTRUCTIONS.md  Makefile  README.md  README_DOCKER.md  START.bat  TESTING_CHECKLIST.md  TESTS_REPORT.md  auth.db  catalog.db  catalog.db-shm  catalog.db-wal  docker-compose.yml  order.db  order.db-shm  order.db-wal  pyproject.toml  pytest.ini  start-all.bat
.github/workflows/: README.md  auth-service-tests.yml  catalog-service-tests.yml  ci-cd.yml  order-service-tests.yml
admin/: ADMIN_IMPROVEMENTS_SUMMARY.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
admin/src/: App.tsx  index.css
archive/: app.db.backup.20260109_170751  app.db.backup.20260109_170918  звіт машевська - Copy.docx
backend/: .dockerignore  Dockerfile  config.py  database.py  deps.py  enums.py  main.py  requirements.txt  security.py
backend/core/: config.py  security.py
backend/database/: __init__.py  base.py  session.py
backend/models/: __init__.py  cart.py  category.py  menu_item.py  order.py  order_item.py  payment.py  product.py  promo_code.py  review.py  user.py  variant.py
client/: .dockerignore  DESIGN_UPDATES.md  Dockerfile  README.md  UI_IMPROVEMENTS_SUMMARY.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
docs/: KUBERNETES_SETUP.md
k8s/: README.md  configmap.yaml  deploy.bat  deploy.sh  ingress.yaml  namespace.yaml  persistent-volume-claim.yaml  secret.yaml
tests/: README.md  __init__.py  conftest.py
(+212 files in other folders)
